--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,20 +1,48 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
-
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="container">
+        <h1 class="project-name">Studentenvereniging Hexion</h1>
+        <div id="timeline">
+            <div class="timeline-item">
+                <div class="timeline-icon">
+                    <i class="fab fa-buy-n-large"></i>
+                </div>
+                <div class="timeline-content">
+                    <h2>LOREM IPSUM DOLOR</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Atque, facilis quo maiores magnam modi ab libero praesentium blanditiis.
+                    </p>
+                    <a href="#" class="btn">button</a>
+                </div>
+            </div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+            <div class="timeline-item">
+                <div class="timeline-icon">
+                    <i class="fas fa-candy-cane"></i>
+                </div>
+                <div class="timeline-content right">
+                    <h2>LOREM IPSUM DOLOR</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+                    </p>
+                    <a href="#" class="btn">button</a>
+                </div>
+            </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/lenne/OneDrive/Bureaublad/site_working_directory/Hexion_Site/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/lenne/OneDrive/Bureaublad/site_working_directory/Hexion_Site/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
-</div>
+            <div class="timeline-item">
+                <div class="timeline-icon">
+                    <i class="fas fa-check"></i>
+                </div>
+                <div class="timeline-content">
+                    <h2>LOREM IPSUM DOLOR</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, facilis quo. Maiores magnam modi ab libero praesentium blanditiis consequatur aspernatur accusantium maxime molestiae sunt ipsa.
+                    </p>
+                    <a href="#" class="btn">button</a>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
