--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
     </head>
     <body>
         {% include './Shared/Header.html.twig' %}
-        <div class="main"></div>
+        <div class="headerHeight"></div>
         {% block body %}{% endblock %}
         {% block javascripts %}
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
