--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,11 +3,14 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
+    <div class="container">
+        <h1>Register</h1>
 
-    <h1>Register</h1>
-
-    {{ form_start(registrationForm) }}
-    {{ form_widget(registrationForm) }}
-        <button type="submit" class="btn btn-success">Register</button>
-    {{ form_end(registrationForm) }}
+        {{ form_start(registrationForm) }}
+        {{ form_widget(registrationForm) }}
+        <div class="contentAlignend">
+            <button type="submit" class="btn btn-success">Register</button>
+        </div>
+        {{ form_end(registrationForm) }}
+    <div/>
 {% endblock %}
