--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -30,9 +30,11 @@
             </label>
         </div>
 
-        <button class="btn btn-lg btn-success " type="submit" >
-            login
-        </button>
+        <div class="contentAlignend">
+            <button class="btn btn-lg btn-success " type="submit" >
+                login
+            </button>
+        </div>
     </form>
 </div>
 {% endblock %}
