--- a/templates/Shared/Header.html.twig
+++ b/templates/Shared/Header.html.twig
@@ -6,6 +6,7 @@
                 <span class="glyphicon glyphicon-menu-hamburger"></span>
             </button>
             <div class="navbar-left logo">
+               <img src="{{ asset('build/images/schild.png') }}" alt="Hexion schild">
             </div>
         </div>
         <div class="collapse navbar-collapse navbar-right" id="myNavbar">
