--- a/templates/Shared/Header.html.twig
+++ b/templates/Shared/Header.html.twig
@@ -11,10 +11,14 @@
         </div>
         <div class="collapse navbar-collapse navbar-right" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li><a href="#intro">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Menu</a></li>
-                <li><a href="#contact">Reserve</a></li>
+                <li><a href="#portfolio">Info</a></li>
+                <li><a href="#contact">Sponsors</a></li>
+                {% if app.user %}
+                    <li><a href="{{ path('app_logout')}}">{{ app.user.naam }}</a></li>
+                {% else %}
+                    <li><a href="{{ path('app_login') }}">login</a></li>
+                    <li><a href="{{ path('app_register') }}">signin</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
