--- a/templates/Shared/Header.html.twig
+++ b/templates/Shared/Header.html.twig
@@ -6,15 +6,17 @@
                 <span class="glyphicon glyphicon-menu-hamburger"></span>
             </button>
             <div class="navbar-left logo">
-               <img src="{{ asset('build/images/schild.png') }}" alt="Hexion schild">
+                <a href="{{ path('main')}}">
+                    <img src="{{ asset('build/images/schild.png') }}" alt="Hexion schild">
+                </a>
             </div>
         </div>
         <div class="collapse navbar-collapse navbar-right" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li><a href="#portfolio">Info</a></li>
-                <li><a href="#contact">Sponsors</a></li>
+                <li><a href="{{ path('sponsors')}}">Sponsors</a></li>
                 {% if app.user %}
-                    <li><a href="{{ path('app_logout')}}">{{ app.user.naam }}</a></li>
+                    <li><a href="{{ path('profile')}}">{{ app.user.naam }}</a></li>
                 {% else %}
                     <li><a href="{{ path('app_login') }}">login</a></li>
                     <li><a href="{{ path('app_register') }}">signin</a></li>
