--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col-md-5 col-sm-8 col-sm-offset-2 col-md-offset-0">
             <div class="customProfileCard">
-
+                {{ app.user.roles[0] }}
             </div>
         </div>
     </div>
