added delete + edit functie

--- a/templates/functies/edit.html.twig
+++ b/templates/functies/edit.html.twig
@@ -1,6 +1,5 @@
 {% extends 'base.html.twig' %}
 
-
 {% block body %}
     <div class="container">
         <h1>Voeg Functie toe</h1>
@@ -8,7 +7,7 @@
         {{ form_start(FunctieForm) }}
         {{ form_widget(FunctieForm) }}
         <div class="contentAlignend">
-            <button type="submit" class="btn btn-success">Voeg Functie toe</button>
+            <button type="submit" class="btn btn-success">Pas Functie aan</button>
         </div>
         {{ form_end(FunctieForm) }}
     <div/>
