--- a/templates/functies/showAll.html.twig
+++ b/templates/functies/showAll.html.twig
@@ -2,12 +2,32 @@
 
 {% block body %}
     <div class="container">
-        <h1>alle functies</h1>
+        <center><h1>functies</h1></center>
+        <table class="table table-dark">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Titel</th>
+                <th scope="col">Description</th>
+                <th scope="col">Edit</th>
+                <th scope="col">Delete</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for functie in functies %}
+            <tr>
+                <th scope="row">{{ functie.id }}</th>
+                <td>{{ functie.titel }}</td>
+                <td>{{ functie.beschrijving }}</td>
+                <td><a href="{{ path('editfunctie',{id: functie.id}) }}"><i class="fas fa-edit"></i></a></td>
+                <td><a href="{{ path('deletefunctie',{id: functie.id}) }}"><i class="far fa-trash-alt"></i></a> </td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
     <ul>
-        {% for functie in functies %}
-            <li>{{ functie.titel }}</li>
-            <li>{{ functie.beschrijving }}</li>
-        {% endfor %}
+
     </ul>
 
     </div>
