added UX routing to functies pages and footer

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -11,3 +11,11 @@ body {
     text-align: end;
 }
 
+.edit-buttons{
+    color: #ccc !important;
+
+}
+.edit-buttons:hover {
+    color: #229444 !important;
+}
+
