--- a/templates/Shared/Footer.html.twig
+++ b/templates/Shared/Footer.html.twig
@@ -2,31 +2,35 @@
 <footer class="site-footer">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-6">
-                <h6>About</h6>
-                <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+            <div class="col-sm-12 col-md-9">
+                <h6>Over Ons</h6>
+                <p class="text-justify">
+                    Wij zijn een vereniging voor en door studenten.
+                    Bij ons kan je ook terecht voor problemen met je lessen, extra informatie, ...
+                    Hexion wil ook als studentenvereniging je Hasselt en
+                    omstreken leren kennen zoals een echte student.
+                </p>
             </div>
 
             <div class="col-xs-6 col-md-3">
                 <h6>Categories</h6>
                 <ul class="footer-links">
-                    <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
-                    <li><a href="http://scanfcode.com/category/front-end-development/">UI Design</a></li>
-                    <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
-                    <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
-                    <li><a href="http://scanfcode.com/category/android/">Android</a></li>
-                    <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
-                </ul>
-            </div>
 
-            <div class="col-xs-6 col-md-3">
-                <h6>Quick Links</h6>
-                <ul class="footer-links">
-                    <li><a href="http://scanfcode.com/about/">About Us</a></li>
-                    <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
-                    <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
-                    <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
-                    <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
+                    {% if app.user %}
+                        <li><a href="{{ path('profile')}}">Profiel: {{ app.user.naam }}</a></li>
+                        {% if app.user.granted("ROLE_ADMIN") %}
+                            <li><a href=" {{ path('showfuncties') }}">functie beheer</a></li>
+                            <li><a href="/">gebruikers beheer</a></li>
+                            <li><a href="/">evenement beheer</a></li>
+                        {% endif %}
+                    {% else %}
+                        <li><a href="{{ path('app_login') }}">login</a></li>
+                        <li><a href="{{ path('app_register') }}">signin</a></li>
+                    {% endif %}
+
+                    <li><a href="#">Info</a></li>
+                    <li><a href="#">Info</a></li>
+                    <li><a href="{{ path('sponsors')}}">Sponsors</a></li>
                 </ul>
             </div>
         </div>
@@ -35,16 +39,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-sm-6 col-xs-12">
-                <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by
-                    <a href="#">Scanfcode</a>.
+                <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by
+                    <a href="{{ path("main") }}">Studentenvereniging Hexion</a>.
                 </p>
             </div>
 
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <ul class="social-icons">
-                    <li><a class="facebook" href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li><a class="twitter" href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a class="dribbble" href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a class="facebook" href="https://www.facebook.com/studentenvereniging.hexion"><i class="fab fa-facebook"></i></a></li>
+                    <li><a class="Insta" href="#"><i class="fab fa-instagram"></i></a></li>
                     <li><a class="linkedin" href="#"><i class="fab fa-linkedin"></i></a></li>
                 </ul>
             </div>
