--- a/templates/functies/showAll.html.twig
+++ b/templates/functies/showAll.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         <center><h1>functies</h1></center>
-        <table class="table table-dark">
+        <table class="table table-dark" style="margin-bottom: 0;" >
             <thead>
             <tr>
                 <th scope="col">#</th>
@@ -19,16 +19,24 @@
                 <th scope="row">{{ functie.id }}</th>
                 <td>{{ functie.titel }}</td>
                 <td>{{ functie.beschrijving }}</td>
-                <td><a href="{{ path('editfunctie',{id: functie.id}) }}"><i class="fas fa-edit"></i></a></td>
-                <td><a href="{{ path('deletefunctie',{id: functie.id}) }}"><i class="far fa-trash-alt"></i></a> </td>
+                <td>
+                    <a class="edit-buttons" href="{{ path('editfunctie',{id: functie.id}) }}">
+                        <i class="fas fa-edit"></i>
+                    </a>
+                </td>
+                <td>
+                    <a class="edit-buttons" href="{{ path('deletefunctie',{id: functie.id}) }}" onclick="return confirm('are u sure?') ">
+                        <i class="far fa-trash-alt"></i>
+                    </a>
+                </td>
             </tr>
             {% endfor %}
             </tbody>
         </table>
-
-    <ul>
-
-    </ul>
+        <hr style="margin-top: 0;" />
+        <div class="contentAlignend">
+            <a href=" {{ path('addfunctie') }}"><button type="submit" class="btn btn-success" >voeg Functie toe</button></a>
+        </div>
 
     </div>
 {% endblock %}
